2004-11-02  Atsushi Enomoto  <atsushi@ximian.com>

	* CustomDataClassGenerator.cs : custom DataTable ctor should call
	  InitializeFields(), and those DataColumns created by that method
	  should take data type. This should fix bug #68972.

2004-10-15  Atsushi Enomoto  <atsushi@ximian.com>

	* DataSet.cs : Also clear UnhandledAttributes ArrayList before 
	  generating next attribute column schema. This fixes bug #68432.

2004-10-14 Umadevi S <sumadevi@novell.com>
        * DataTable.cs : Corrected the Clone method to use  Activator.CreateInstance so that the
        correct subclass is returned. This fixes bug #67631
                                                                                        
2004-10-14 Umadevi S <sumadevi@novell.com>
	* DataSet.cs : Corrected the Clone method to use  Activator.CreateInstance so that the 	
	correct subclass is returned. This fixes bug #67627

2004-10-13  Atsushi Enomoto  <atsushi@ximian.com>

	* DataSet.cs : clear UnhandledAttributes ArrayList before generating
	  next element column schema. This fixes bug #68256.

2004-10-12  Atsushi Enomoto  <atsushi@ximian.com>

	* DataSet.cs : now xs:schema contains xmlns="".
	  This fixes bug #68008.

2004-10-12  Atsushi Enomoto  <atsushi@ximian.com>

	* DataSet.cs : DBNull attribute column should not be written as
	  empty attribute. This fixes bug #68007.

2004-10-12  Atsushi Enomoto  <atsushi@ximian.com>

	* DataSet.cs, XmlConstant.cs, XmlSchemaDataImporter.cs:
	  DataColumn.ReadOnly was not handled. This fixes bug #68005.
	  Attribute defaultValue was not handled too.

2004-10-07  Atsushi Enomoto  <atsushi@ximian.com>

	* DataSet.cs :
	  - When AllowDBNull is false on attribute DataColumn, its schema
	    should contain use="required". This fixes bug #66792.
	  - If MaxLength is set on attribute DataColumn, the mapped schema
	    type should contain maxLength facet. This fixes bug #66793.

2004-10-04  Atsushi Enomoto  <atsushi@ximian.com>
