@@ -1,3 +1,9 @@
+2004-11-10  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* CustomDataClassGenerator.cs : generated foreign key constraint
+	  construction code was creating empty child columns and thus it
+	  was invalid. This fixes bug #69276 (patch by Martin Voelkle).
+
 2004-11-02  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* CustomDataClassGenerator.cs : custom DataTable ctor should call
